feature(typesystem)!: fully implemented granular typesystem apart from rule references